ajoute un header dans inde.html :  <meta http-equiv=Permissions-Policy content=interest-cohort=()>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mickaël Bula">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <meta name="description" content="Une to-do list réalisée avec Vue 3 et qui utilise la persistence des données dans le localStorage.">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
